--- a/ga/css/index.css
+++ b/ga/css/index.css
@@ -73,6 +73,13 @@ body{
     margin-top: 20px;
     
 }
+.flex-item-gain{
+    text-shadow: 0px 50px green;
+}
+.flex-item-lost{
+    text-shadow: 0px 50px red;
+}
+
 .flex-item{
     width: 300px;
     height: 300px;
@@ -85,8 +92,7 @@ body{
     box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
     <!--font-family: arial,sans-serif;-->
 	font-family: 'Open Sans',sans-serif;
-	
-	
+    text-shadow: 0px 10px 15px rgba(0, 0, 0, 0.7)
 }
 .flex-item:nth-child(1) {
     -webkit-order: 0;
