--- a/ga/css/index.css
+++ b/ga/css/index.css
@@ -1,3 +1,34 @@
+.notification_hidden{
+	background-color: rgba(189, 39, 26, 0);
+	top: -45px;
+	-webkit-transition: background-color 500ms, top 500ms ease;
+	-moz-transition: background-color 500ms, top 500ms ease;
+	-ms-transition: background-color 500ms, top 500ms ease;
+	-o-transition: background-color 500ms, top 500ms ease;
+	transition: background-color 500ms, top 500ms ease;
+	
+}
+.notification_hidden * {
+	display: none;
+}
+.notification_visible{
+	position: fixed !important;
+	font-family: 'Open Sans',sans-serif;
+	font-size: 20px;
+	top: 35px;
+	color: white;
+	left: 50%;
+	background-color: rgb(189, 39, 26);
+	padding: 0 10px;
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+	-webkit-transition: background-color 500ms, top 500ms ease;
+	-moz-transition: background-color 500ms, top 500ms ease;
+	-ms-transition: background-color 500ms, top 500ms ease;
+	-o-transition: background-color 500ms, top 500ms ease;
+	transition: background-color 500ms, top 500ms ease;
+}
 body{
 	font-family: serif;
 }
@@ -14,6 +45,7 @@ body{
 	font-weight: 300;
 	color: #fff;
 	line-height: 59px;
+
 }
 #topbar > div {
 	float: left;
@@ -26,6 +58,8 @@ body{
 	position: absolute;
 	right:0;
 }
+
+
 #login_img{
   height: 48px;
   width: 48px;
